[css-grid] Fix static position for positioned grid items

The spec was updated to define properly the static position
for positioned grid items, but we didn't update the implementation yet:
https://drafts.csswg.org/css-grid-1/issues-wd-20150108#issue-1

We were only setting the static position when the start line
was not auto. Otherwise we were using the default one
which includes the padding.
With the spec change we need to set it always,
even if the start line is auto.

Updated several tests to follow the new expected behavior.

BUG=607137

Review-Url: https://codereview.chromium.org/1929483002
Cr-Commit-Position: refs/heads/master@{#390215}